# jaynewey.github.io

./: .gitignore  404.html  Cargo.toml  Trunk.toml  index.html  portfolio-27d1906d6c131463.js  portfolio-27d1906d6c131463_bg.wasm  portfolio-300681ec7ba6861e.js  portfolio-300681ec7ba6861e_bg.wasm  portfolio-861aca6e2457e588.js  portfolio-861aca6e2457e588_bg.wasm  portfolio-c508563ba068c84b.js  portfolio-c508563ba068c84b_bg.wasm  railwind-6ea4a826ffa35d98.css  railwind-9fdc0327be694efa.css  railwind-b5c28791891f1eca.css  railwind-c093437430e799a5.css  railwind.config.ron  rust-toolchain.toml
.github/workflows/: cd.yml
assets/: islands.glb
scripts/: css.sh
src/: clouds.rs  components.rs  config.rs  lib.rs  main.rs  routes.rs  scene.rs
src/components/: bar.rs  logo.rs  theme_button.rs
src/routes/: about.rs  contact.rs  home.rs  projects.rs
