[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.3.0"
three-d = { git = "https://github.com/asny/three-d" }
three-d-asset = { git = "https://github.com/asny/three-d-asset", features = ["data-url", "http", "gltf", "image", "vol"] }
regex = { version = "1.8.1", optional = true }
web-sys = { version = "0.3.62", features = ["Window", "Storage", "Document", "Location", "Element", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry", "History", "ScrollRestoration", "EventTarget"] }
wasm-bindgen = "0.2.85"
js-sys = "0.3.62"
futures = "0.3.28"
leptos_icons = { version = "0.0.10", features = [
    "csr",
] }
icondata_ch = { version = "0.0.6", features = ["ChMoon", "ChSun", "ChChevronDown", "ChMapPin", "ChGraduateCap", "ChBriefcase", "ChQuote", "ChGithub", "ChLinkExternal", "ChMail"] }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
console_log = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
clippy = "0.0.302"

